--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -170,21 +170,47 @@ footer {
     }
 
     .footer-bottom {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
 
-        .left-section {
+        background-color: var(--footer_bg_color);
+        .container {
+            padding: 1.5rem 0;
             display: flex;
-            justify-content: flex-start;
+            justify-content: space-between;
             align-items: center;
+    
+            .left-section {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+    
+                .sign-up-btn {
+                    text-decoration: none;
+                    color: var(--footer_title_color);
+                    padding: 1rem;
+                    border: 2px solid var(--main_color);
+                    font-weight: bold
+                }
+            }
 
-            .sign-up-btn {
-                text-decoration: none;
-                color: var(--footer_title_color);
-                padding: 1rem;
-                border: 2px solid var(--main_color);
-                font-weight: bold
+            .right-sct{
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+    
+                .follow-title {
+                    color: var(--main_color);
+                }
+                
+                ul {
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
+                    list-style-type: none;
+        
+                    li {
+                        margin-left: 2rem;
+                    }
+                }
             }
         }
     }
