--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,11 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 // ROOT
 :root {
     --container_big_width: 75%;
     --container_small_width: 70%;
     //FONT FAMILY
-    --title_font_family: "Open Sans Condensed", sans-serif;
+    --title_font_family: "Barlow Semi Condensed", sans-serif;
     --text_font_family: "Open Sans", sans-serif;
 
     // main
@@ -59,7 +60,7 @@ header {
         width: var(--container_big_width);
 
         .logo {
-            width: 7%;
+            padding: 0.8rem 0;
         }
 
         .nav-bar {
@@ -77,7 +78,9 @@ header {
                         text-decoration: none;
                         color: #000000;
                         text-transform: uppercase;
+                        font-size: 1rem;
                         font-weight: bold;
+                        font-family: var(--title_font_family);
                     }
 
                     .arrow-down {
@@ -106,22 +109,30 @@ header {
             }
         }
 
-        .search-bar {
-            border-bottom: 3px solid var(--main_color);
-            justify-content: space-between;
-            input {
-                border: none;
+        .container-search-bar {
+            width: 100%;
+            justify-content: flex-end;
+            .search-bar {
                 width: 70%;
-                &:focus-visible {
-                    outline: none;
+                border-bottom: 3px solid var(--main_color);
+                align-self: center;
+                justify-content: flex-end;
+                input {
+                    border: none;
+                    width: 60%;
+                    &:focus-visible {
+                        outline: none;
+                    }
                 }
-            }
 
-            button {
-                &:active {
-                    color: #00000000;
+                button {
                     background-color: #00000000;
-                    border-color: #00000000;
+                    border: none;
+                    &:active {
+                        color: #00000000;
+                        background-color: #00000000;
+                        border-color: #00000000;
+                    }
                 }
             }
         }
@@ -130,7 +141,7 @@ header {
 
 //JUMBOTRON
 .jumbotron {
-    height: 23rem;
+    height: 20rem;
     background-image: url(../img/jumbotron.jpg);
     background-size: cover;
 }
@@ -150,6 +161,7 @@ header {
             color: var(--dark_section_text_color);
             background-color: var(--main_color);
             padding: 0.9rem 1rem;
+            font-family: var(--title_font_family);
             position: absolute;
             top: 0;
             left: -10px;
@@ -178,7 +190,7 @@ header {
                         .cover {
                             width: 100%;
                             aspect-ratio: 0.8;
-                            object-fit: cover; 
+                            object-fit: cover;
                             object-position: top;
                         }
                     }
@@ -197,9 +209,10 @@ header {
             border: none;
             background-color: var(--main_color);
             color: var(--dark_section_text_color);
-            padding: 1rem 5.5rem;
-            font-size: 1rem;
+            padding: 1rem 4.5rem;
+            font-size: 1.3rem;
             font-weight: bold;
+            font-family: var(--title_font_family);
         }
     }
 }
@@ -221,12 +234,12 @@ header {
 
         &:last-child {
             img {
-                width: 45%;
+                width: 40%;
             }
         }
 
         img {
-            height: 4.5rem;
+            height: 4rem;
             margin-right: 0.3rem;
         }
     }
@@ -265,6 +278,8 @@ footer {
                         .list-title {
                             text-transform: uppercase;
                             color: var(--dark_section_text_color);
+                            font-family: var(--title_font_family);
+                            font-size: 1.6rem;
                         }
                         ul {
                             padding: 0;
@@ -274,6 +289,7 @@ footer {
                                 a {
                                     text-decoration: none;
                                     color: var(--secondary_text_color);
+                                    font-size: 0.9rem;
                                 }
                             }
                         }
@@ -295,6 +311,7 @@ footer {
     .footer-bottom {
         background-color: var(--footer_bg_color);
         .container {
+            width: var(--container_big_width);
             padding: 1.5rem 0;
             display: flex;
             justify-content: space-between;
@@ -321,6 +338,8 @@ footer {
 
                 .follow-title {
                     color: var(--main_color);
+                    font-family: var(--title_font_family);
+                    margin: 0;
                 }
 
                 ul {
@@ -328,10 +347,8 @@ footer {
                     justify-content: flex-end;
                     align-items: center;
                     list-style-type: none;
-
-                    li {
-                        margin-left: 2rem;
-                    }
+                    gap: 1rem;
+                    margin: 0;
                 }
             }
         }
